...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.NewUserActivity">

    <Button
        android:id="@+id/finish_new_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Bio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="179dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Height (in)"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editTextTextBio"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextBio" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="182dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint=" Weight (lb)"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editTextHeight"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="Select Date"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
...
