...
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="Loading"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/user_email_text"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Space
        android:id="@+id/space"
...
