<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_exercise_btn"
        android:icon="@drawable/ic_delete_forever_24"
        android:title="Delete"
        app:showAsAction="always" />
</menu>