<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/title_me" />

</menu>